2008-01-08  Johan Dahlin  <johan@gnome.org>

	* flumotion/ui/kiwipatches.py (_open_glade): Another pychecker workaround

	* flumotion/admin/gtk/parts.py:
	Enable tooltips for moods, conditionally for Gtk 2.12 or higher.
	Fixes #820

	* flumotion/ui/kiwipatches.py:
	(old_proxy_entry_init): Attempt to fix pychecker

	* flumotion/ui/Makefile.am:
	* flumotion/ui/glade.py:
	* flumotion/ui/kiwipatches.py:
	* flumotion/wizard/basesteps.py:
	* flumotion/wizard/productionsteps.py:
	* po/POTFILES.in:
	Refactor kiwi monkey patches to a separate file.
	Add a monkey patch to workaround a bug fixed in kiwi 1.9.15.

2008-01-08  Johan Dahlin  <johan@gnome.org>

	* data/glade/wizard_audiotest.glade:
	* data/glade/wizard_testsource.glade:
	* data/glade/wizard_tvcard.glade:
	* data/glade/wizard_webcam.glade:
	* flumotion/test/test_wizard.py:
	* flumotion/wizard/enums.py:
	* flumotion/wizard/models.py:
	* flumotion/wizard/productionsteps.py:
	* flumotion/wizard/save.py:

	Use proxies for all production steps so we can get rid
	of get_state(). Remove most of the enum usage in the production
	step at the same time. Merge firewire audio/video steps to a common
	step to avoid duplication.

2008-01-08  Johan Dahlin  <johan@gnome.org>

	* po/sv.po: Update swedish translation

2008-01-07  Johan Dahlin  <johan@gnome.org>

	* flumotion/worker/job.py (CheckJobHeaven.timeout): job.pid, not
	process.pid. Remove unused import too.

2008-01-07  Arek Korbik  <arkadini@gmail.com>

	* flumotion/admin/gtk/main.py:
	Add missing '_' definition for gettext.

2008-01-07  Johan Dahlin  <johan@gnome.org>

	* flumotion/admin/gtk/componentview.py:
	Import gettext and set _

2008-01-07  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/manager/admin.py:
	  Raise SleepingComponentError with the proper argument, the state.

2008-01-04  Johan Dahlin  <johan@gnome.org>

	* flumotion/admin/gtk/: Audit and mark more strings as translatable
